stop images stretching

--- a/src/templates/article.css
+++ b/src/templates/article.css
@@ -43,7 +43,3 @@
 .article-domain-favicon {
   margin-right: 0.25rem;
 }
-
-.article-image {
-  flex: 1;
-}
